--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-content-loader": "^6.2.1",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.3",
+    "react-icons": "^4.8.0",
     "react-redux": "^8.0.5",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.8.1",
